@@ -3,6 +3,7 @@ package de.tum.cit.aet.artemis.iris.service.pyris;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -27,7 +28,7 @@ import de.tum.cit.aet.artemis.iris.dto.IngestionState;
 import de.tum.cit.aet.artemis.iris.dto.IngestionStateResponseDTO;
 import de.tum.cit.aet.artemis.iris.dto.MemirisLearningDTO;
 import de.tum.cit.aet.artemis.iris.dto.MemirisMemoryConnectionDTO;
-import de.tum.cit.aet.artemis.iris.dto.MemirisMemoryDTO;
+import de.tum.cit.aet.artemis.iris.dto.MemirisMemoryDataDTO;
 import de.tum.cit.aet.artemis.iris.dto.MemirisMemoryWithRelationsDTO;
 import de.tum.cit.aet.artemis.iris.exception.IrisException;
 import de.tum.cit.aet.artemis.iris.exception.IrisForbiddenException;
@@ -41,6 +42,10 @@ import de.tum.cit.aet.artemis.iris.service.pyris.dto.memiris.PyrisLearningDTO;
 import de.tum.cit.aet.artemis.iris.service.pyris.dto.memiris.PyrisMemoryConnectionDTO;
 import de.tum.cit.aet.artemis.iris.service.pyris.dto.memiris.PyrisMemoryDTO;
 import de.tum.cit.aet.artemis.iris.service.pyris.dto.memiris.PyrisMemoryWithRelationsDTO;
+import de.tum.cit.aet.artemis.iris.service.pyris.dto.search.PyrisLectureSearchRequestDTO;
+import de.tum.cit.aet.artemis.iris.service.pyris.dto.search.PyrisLectureSearchResultDTO;
+import de.tum.cit.aet.artemis.iris.service.pyris.dto.search.PyrisSearchAskRequestDTO;
+import de.tum.cit.aet.artemis.iris.service.pyris.dto.search.PyrisSearchAskResponseDTO;
 import de.tum.cit.aet.artemis.iris.web.internal.PyrisInternalStatusUpdateResource;
 
 /**
@@ -80,13 +85,13 @@ public class PyrisConnectorService {
      * @param userId the Artemis user id
      * @return list of memories (can be empty)
      */
-    public List<MemirisMemoryDTO> listMemirisMemories(long userId) {
+    public MemirisMemoryDataDTO listMemirisMemoryData(long userId) {
         try {
-            var response = restTemplate.getForEntity(pyrisUrl + "/api/v1/memiris/user/" + userId, MemirisMemoryDTO[].class);
+            var response = restTemplate.getForEntity(pyrisUrl + "/api/v2/memiris/user/" + userId, MemirisMemoryDataDTO.class);
             if (!response.getStatusCode().is2xxSuccessful() || !response.hasBody() || response.getBody() == null) {
-                return List.of();
+                return new MemirisMemoryDataDTO(Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
             }
-            return Arrays.asList(response.getBody());
+            return response.getBody();
         }
         catch (HttpStatusCodeException e) {
             if (e.getStatusCode().value() == 404) {
@@ -95,7 +100,7 @@ public class PyrisConnectorService {
             throw toIrisException(e);
         }
         catch (RestClientException | IllegalArgumentException e) {
-            log.error("Failed to list Memiris memories for user {}", userId, e);
+            log.error("Failed to list Memiris memory data for user {}", userId, e);
             throw new PyrisConnectorException("Could not fetch memories from Pyris");
         }
     }
@@ -159,6 +164,76 @@ public class PyrisConnectorService {
         catch (RestClientException | IllegalArgumentException e) {
             log.error("Failed to delete Memiris memory {} for user {}", memoryId, userId, e);
             throw new PyrisConnectorException("Could not delete memory in Pyris");
+        }
+    }
+
+    /**
+     * Deletes all Memiris memories for a user.
+     *
+     * @param userId the Artemis user id
+     */
+    public void deleteAllMemirisMemories(long userId) {
+        try {
+            restTemplate.delete(pyrisUrl + "/api/v1/memiris/user/" + userId + "/delete-all");
+        }
+        catch (HttpStatusCodeException e) {
+            throw toIrisException(e);
+        }
+        catch (RestClientException | IllegalArgumentException e) {
+            log.error("Failed to delete all Memiris memories for user {}", userId, e);
+            throw new PyrisConnectorException("Could not delete all memories in Pyris");
+        }
+    }
+
+    /**
+     * Searches for lecture units in Pyris using a query string.
+     *
+     * @param query the search query
+     * @param limit the maximum number of results to return
+     * @return list of matching lecture search results
+     */
+    public List<PyrisLectureSearchResultDTO> searchLectures(String query, int limit) {
+        var endpoint = "/api/v1/search/lectures";
+        try {
+            var requestDTO = new PyrisLectureSearchRequestDTO(query, limit);
+            var response = restTemplate.postForEntity(pyrisUrl + endpoint, objectMapper.valueToTree(requestDTO), PyrisLectureSearchResultDTO[].class);
+            if (!response.getStatusCode().is2xxSuccessful() || !response.hasBody() || response.getBody() == null) {
+                return List.of();
+            }
+            return Arrays.asList(response.getBody());
+        }
+        catch (HttpStatusCodeException e) {
+            throw toIrisException(e);
+        }
+        catch (RestClientException | IllegalArgumentException e) {
+            log.error("Failed to search lectures in Pyris", e);
+            throw new PyrisConnectorException("Could not fetch lecture search results from Pyris");
+        }
+    }
+
+    /**
+     * Asks Iris to answer a question using lecture content retrieved via HyDE.
+     *
+     * @param query the user's question or search text
+     * @param limit the maximum number of source segments to retrieve
+     * @return the answer with clickable source references
+     */
+    public PyrisSearchAskResponseDTO searchAsk(String query, int limit) {
+        var endpoint = "/api/v1/search/ask";
+        try {
+            var requestDTO = new PyrisSearchAskRequestDTO(query, limit);
+            var response = restTemplate.postForEntity(pyrisUrl + endpoint, objectMapper.valueToTree(requestDTO), PyrisSearchAskResponseDTO.class);
+            if (!response.getStatusCode().is2xxSuccessful() || !response.hasBody() || response.getBody() == null) {
+                throw new PyrisConnectorException("Empty response from Pyris search/ask");
+            }
+            return response.getBody();
+        }
+        catch (HttpStatusCodeException e) {
+            throw toIrisException(e);
+        }
+        catch (RestClientException | IllegalArgumentException e) {
+            log.error("Failed to get Iris answer from Pyris", e);
+            throw new PyrisConnectorException("Could not fetch Iris answer from Pyris");
         }
     }
 
